--- a/5_13_duduge/style.css
+++ b/5_13_duduge/style.css
@@ -11,3 +11,8 @@
     width: 100px;
     border: solid black 1px;
 }
+
+.mole {
+    background-image: url("img/mole.png");
+    background-size: cover;
+}
